# pypp

./: .gitignore  .gitmodules  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
pcpp/: parser.py
pypp/: evaluator.py  lextab.py  parser.py  pcmd.py  preprocessor.py
pypp/pickled/: lex.pickle  yacc.pickle
tests/: alternate_input_encodings.py  cstd.py  doctests.py  embedded.py  eval.py  issue0017.py  issue0025.py  issue0027.py  issue0030.py  issue0032.py  issue0037.py  issue0044.py  issue0051.py  issue0057.py  issue0059.py  issue0063.py  issue0079.py  issue0098.py  issue0103.py  n_std-pypp.i  n_std.py  passthru.py
tests/issue0017/: inc.h
tests/test-c/: n_std.c
